refactor: fix header styles

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -1,4 +1,14 @@
-.labelButton {
-  all: unset;
-  cursor: pointer;
+.toolbar {
+  display: flex;
+  justify-content: space-between;
+
+  .labelButton {
+    font-weight: bold;
+  }
+
+  .wrapper {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+  }
 }
