refactor: add styles

--- a/src/components/productCardsList/productCard/productCard.module.scss
+++ b/src/components/productCardsList/productCard/productCard.module.scss
@@ -1,9 +1,31 @@
 .card {
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-
   width: 300px;
-  height: 410px;
   padding: 10px;
+
+  &:hover {
+    box-shadow: 0 0 5px #442c2e;
+  }
+
+  .cardInfo {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 10px;
+
+    .description,
+    .price,
+    .img,
+    .name {
+      margin-bottom: 10px;
+    }
+
+    .img {
+      height: 200px;
+    }
+
+    .name {
+      color: #442c2e;
+    }
+  }
 }
