--- a/src/components/productCardsList/productCardsList.module.scss
+++ b/src/components/productCardsList/productCardsList.module.scss
@@ -1,8 +1,8 @@
 .wrapper {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  row-gap: 30px;
   justify-content: space-evenly;
 
-  margin-top: 50px;
+  margin-top: 100px;
 }
