--- a/src/components/productCardsList/productCardsList.module.scss
+++ b/src/components/productCardsList/productCardsList.module.scss
@@ -1,8 +1,14 @@
 .wrapper {
   display: flex;
-  flex-wrap: wrap;
-  row-gap: 30px;
-  justify-content: space-evenly;
+  flex-direction: column;
+  gap: 30px;
+  align-items: center;
 
-  margin-top: 100px;
+  padding-top: 100px;
+}
+
+.products {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
 }
