--- a/src/components/cart/cart.module.scss
+++ b/src/components/cart/cart.module.scss
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    width: 80%;
   }
 
   .form {
@@ -22,4 +23,9 @@
 
 .total {
   background-color: #fedbd0;
+}
+
+.emptyCart {
+  display: flex;
+  flex-direction: column;
 }
