--- a/src/components/cart/cart.module.scss
+++ b/src/components/cart/cart.module.scss
@@ -1,8 +1,12 @@
+.title {
+  padding-top: 100px;
+  padding-bottom: 50px;
+}
+
 .wrapper {
   display: flex;
   flex-direction: row;
   gap: 20px;
-  margin-top: 100px;
 
   .wrapperProducts {
     display: flex;
@@ -10,19 +14,6 @@
     gap: 20px;
     width: 80%;
   }
-
-  .form {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-
-    width: 300px;
-    padding: 10px;
-  }
-}
-
-.total {
-  background-color: #fedbd0;
 }
 
 .emptyCart {
