--- a/src/components/productCardsList/productCardsList.module.scss
+++ b/src/components/productCardsList/productCardsList.module.scss
@@ -2,13 +2,25 @@
   display: flex;
   flex-direction: column;
   gap: 30px;
-  align-items: center;
-
-  padding-top: 100px;
 }
 
 .products {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  gap: 20px;
+  gap: 30px;
+}
+
+.title {
+  padding-top: 100px;
+  padding-bottom: 50px;
+}
+
+.wrapperFilter {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  .select {
+    width: 80%;
+  }
 }
