--- a/src/pages/cart/productsItem/productsItem.module.scss
+++ b/src/pages/cart/productsItem/productsItem.module.scss
@@ -8,6 +8,10 @@
   flex-direction: column;
   justify-content: space-between;
   padding: 10px;
+
+  .sum {
+    font-weight: 400;
+  }
 }
 
 .productInfo {
