--- a/src/components/inputForm/inpuForm.module.scss
+++ b/src/components/inputForm/inpuForm.module.scss
@@ -3,3 +3,13 @@
   flex-direction: column;
   gap: 5px;
 }
+
+.phoneInput {
+  padding: 8.5px 14px;
+  border-radius: 5px;
+  border-style: solid;
+  border-width: 1px;
+  overflow: hidden;
+  border-color: rgba(0, 0, 0, 0.23);
+  font-size: 16px;
+}
